# MyRadar

./: CMakeLists.txt  Makefile  README.md  my_radar  r_scripts
.github/workflows/: main.yml
include/: calculations.h  checker.h  entities.h  img_list.h  radar.h  rect.h  res.h  script.h  tree.h  window.h
lib/my/: Makefile  arr2d_destroy.c  flags.c  is_alpha.c  is_num.c  my.h  my_compute_power_rec.c  my_compute_square_root.c  my_find_prime_sup.c  my_getnbr.c  my_is_prime.c  my_isneg.c  my_itos.c  my_macros.h  my_memset.c  my_printf.c  my_put_double.c  my_put_float.c  my_put_nbr.c  my_putchar.c  my_putstr.c  my_revstr.c  my_showmem.c  my_showstr.c  my_sort_int_array.c  my_str_isalpha.c  my_str_islower.c  my_str_isnum.c  my_str_isprintable.c  my_str_isupper.c  my_str_split.c  my_str_split2char.c  my_strcapitalize.c  my_strcat.c  my_strcmp.c  my_strcpy.c  my_strdup.c  my_strlen.c  my_strlowcase.c  my_strncat.c  (+11 more)
scripts/: r_scripts  script_generator.py
src/: calculations.c  checker.c  controls.c  main.c  radar.c  renderer.c  script.c
src/aircraft/: aircraft.c  aircraft_list.c
src/imgs/: img_list.c
src/quadtree/: qtree.c  rect.c
src/tower/: tower.c  tower_list.c
src/window/: window.c
